2012-05-20  Jamison Hope  <jrh@theptrgroup.com>

	* build.xml: "Inline" named filesets lib-scm and slib-scm to their
	point of use, fixing a problem where the filesets depend on
	with-swing, which is used before it is set in build-settings.

2012-05-13  Per Bothner  <per@bothner.com>

	* build.xml: Add ScriptEngineFactory support for discovering
	JSR-223 script engines (Scheme and optionally XQuery).
	Also, improvements in handling of enable-xml.

2012-05-10  Per Bothner  <per@bothner.com>

	* build.xml: Add dependencies on with-swing property.
	(java-classes): Always compile gnu/kawa/models.

2012-04-08  Per Bothner  <per@bothner.com>

	* AUTHORS: Point to Acknowledgement section of doc/kawa.texi.

2012-02-02  Per Bothner  <per@bothner.com>

	* configure.in (AC_INIT): Set version to 1.12.
	* build.xml (version.release): Likewise.

2011-09-24  Jamison Hope  <jrh@theptrgroup.com>

	* build.xml (-maybe-select-java7): New target.

2011-08-04  Per Bothner  <per@bothner.com>

	* configure.in (with_XQTS): Fix setter to be Posix-compatible.

2011-07-30  Per Bothner  <per@bothner.com>

	* configure.in (ON_WINDOWS): New automake-conditional.
	* build.xml: Rules for building kawa.bat on Windows.

2011-07-28  Per Bothner  <per@bothner.com>

	* build.xml: Add support for enable-javafx and javax.home properties,
	to build Kawa with JavaFX support.

2011-07-27  Per Bothner  <per@bothner.com>

	* configure.in: add support for JavaFX 2.x.
	(--with-javafx): New command-line flag.
	(WITH_JAVAFX): New conditional.
	* Makefile.am (JAVAFX_SUBDIRS): New macro.
	* classes-to-skip-for-runtime: Add some classes.

	* Make-rules (CLASSPATH_ENV): Add quotes.

2011-07-21  Per Bothner  <per@bothner.com>

	Add support for using configure+make (autotools) on Cygwin.
	* configure.in: Use AC_CANONICAL_HOST, not AC_CANONICAL_TARGET.
	(CLASSPATH_SEPARATOR): New substitution variable.
	* Make-rules (CLASSPATH): New variable.  Make Cygwin-safe.