@@ -776,8 +776,9 @@
   <target name="jar" depends="script-factory-scheme,script-factory-xquery">
     <jar jarfile="${dist.kawa.jar}"
          manifest="${src.dir}/jar-manifest">
-       <fileset refid="build.classes"/>
-       <include name="META-INF/services/*"/>
+       <fileset dir="${build.classes}">
+         <include name="META-INF/services/*"/>
+       </fileset>
     </jar>
   </target>
 
